<resources>
    <string name="app_name">PRICE</string>
    <string name="valor_del_dolar">Valor del Dólar</string>
    <string name="col1">Tipo de Dólar</string>
    <string name="col2">Venta</string>
    <string name="col3">Compra</string>
    <string name="col4">Fecha</string>

    <string-array name="tiposDolarSpinner">
        <item>Oficial</item>
        <item>Blue</item>
        <item>MEP</item>
        <item>Turista</item>
        <item>Mayorista</item>
    </string-array>
    <string-array name="tiposDolarPeticion">
        <item>oficial</item>
        <item>blue</item>
        <item>mep</item>
        <item>turista</item>
        <item>mayorista</item>
    </string-array>
    <string-array name="opcionesRangoFecha">
        <item>Última semana</item>
        <item>Último mes</item>
    </string-array>
</resources>