<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.historico.HistoryActivity">

    <!--<include
        android:id="@+id/include"
        layout="@layout/actionbar" /> -->
    <include layout="@layout/actionbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="137dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:text="Históricos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerHistoricos"
        android:layout_width="157dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />


    <Spinner
        android:id="@+id/spinnerRango"
        android:layout_width="157dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/table_heading_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHistoricos"
        app:layout_constraintVertical_bias="0.143"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerRango">

        <TableRow>

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/col4"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/col2"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/col3"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/table_recycler_view"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_heading_layout">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>